<resources>
    <string name="app_name">Splash  4</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="________________string">ಭಾಷೆ ಆಯ್ಕೆಮಾಡಿ </string>
    <string name="_______string">ಕನ್ನಡ</string>
    <string name="english_string">English</string>
    <string name="____________string">ಮುಂದುವರಿಸಿ</string>
    <string name="_________________string">ಸ್ಥಳವನ್ನು ಆರಿಸಿ</string>
    <string name="_________________________string">ಪ್ರಸ್ತುತ ಸ್ಥಳವನ್ನು ಬಳಸಿ</string>
    <string name="_________string">ಬಳ್ಳಾರಿ</string>
    <string name="__________string">ಬೆಂಗಳೂರು</string>
    <string name="_______ek1_string">ಬೀದರ್</string>
    <string name="____________________string">ಬೆಂಗಳೂರು ಗ್ರಾಮಾಂತರ</string>
    <string name="_________ek1_string">ವಿಜಯಪುರ</string>
    <string name="___________string">ಚಾಮರಾಜನಗರ</string>
    <string name="_______________string">ಚಿಕ್ಕಬಳ್ಳಾಪುರ</string>
    <string name="____________ek1_string">ಮುಂದುವರಿಸಿ</string>
    <string name="_______ek2_string">ಮಾರಾಟ</string>
    <string name="__________ek1_string">ಸಹಾಯವಾಣಿ</string>
    <string name="_3_string">3</string>
    <string name="________string">ನ್ಯೂಸ್</string>
    <string name="______10________string"> ಟಾಪ್ 10 ನ್ಯೂಸ್ </string>
    <string name="____________________ek1_string">ಇತ್ತೀಚಿನ ವೀಡಿಯೊಗಳು</string>
    <string name="________________ipl_2020__400_________string">ಹೊಸ ದಾಖಲೆ ಬರೆದ
IPL 2020; 400 ಬಿಲಿ...</string>
    <string name="________________ipl_2020__400_________ek1_string">ಹೊಸ ದಾಖಲೆ ಬರೆದ
IPL 2020; 400 ಬಿಲಿ...</string>
    <string name="________________ipl_2020__400_________ek2_string">ಹೊಸ ದಾಖಲೆ ಬರೆದ
IPL 2020; 400 ಬಿಲಿ...</string>
    <string name="________________ipl_2020__400_________ek3_string">ಹೊಸ ದಾಖಲೆ ಬರೆದ
IPL 2020; 400 ಬಿಲಿ...</string>
    <string name="______________string">ಎಲ್ಲಾ ಗಮನಿಸಿ</string>
    <string name="___________ek1_string">ಇನ್ನಷ್ಟು </string>
    <string name="__________________string">ಬೆಂಗಳೂರು ಗ್ರಾಮೀಣ</string>
    <string name="______________________________________________________________________________string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ ಆರಂಭಕ್ಕೂ ಮುನ್ನ
ಟೀಂ ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="_______24______________________________________________string"> ಕೇವಲ 24 ಗಂಟೆಯೊಳಗೆ ಭಾರತ-ಆಸೀಸ್ ಸರಣಿಯ
ಟಿಕೆಟ್ ಸೋಲ್ಡ್ ಔಟ್</string>
    <string name="____20________________________________________________________________________________________________________________________________________________________string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾಗಿ ಮಾರಾಟವಾಗಿದೆ ಎಂದು ಕ್ರಿಕೆಟ್ ಆಸ್ಟ್ರೇಲಿಯಾ ಮಾಹಿತಿಯನ್ನು...</string>
    <string name="____20____________________________________________________________________________________________________string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾ...</string>
    <string name="_24_comment_string">24 Comment</string>
    <string name="_256_like_string">256 Like</string>
    <string name="_3_share_string">3 Share</string>
    <string name="_1_1k_views_string">1.1k Views</string>
    <string name="_24_comment_ek1_string">24 Comment</string>
    <string name="_256_like_ek1_string">256 Like</string>
    <string name="_3_share_ek1_string">3 Share</string>
    <string name="_1_1k_views_ek1_string">1.1k Views</string>
    <string name="naveen_string">Naveen</string>
    <string name="_5_min_ago_____sports_____ramanagara______string">5 min Ago     Sports     Ramanagara     </string>
    <string name="sameera_string">Sameera</string>
    <string name="_5_min_ago_____politics_____ramanagara______string">5 min Ago     Politics     Ramanagara     </string>
    <string name="______________________________________________________________________________ek1_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ ಆರಂಭಕ್ಕೂ ಮುನ್ನ
ಟೀಂ ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="_______24______________________________________________ek1_string"> ಕೇವಲ 24 ಗಂಟೆಯೊಳಗೆ ಭಾರತ-ಆಸೀಸ್ ಸರಣಿಯ
ಟಿಕೆಟ್ ಸೋಲ್ಡ್ ಔಟ್</string>
    <string name="____20________________________________________________________________________________________________________________________________________________________ek1_string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾಗಿ ಮಾರಾಟವಾಗಿದೆ ಎಂದು ಕ್ರಿಕೆಟ್ ಆಸ್ಟ್ರೇಲಿಯಾ ಮಾಹಿತಿಯನ್ನು...</string>
    <string name="____20____________________________________________________________________________________________________ek1_string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾ...</string>
    <string name="_24_comment_ek2_string">24 Comment</string>
    <string name="_256_like_ek2_string">256 Like</string>
    <string name="_3_share_ek2_string">3 Share</string>
    <string name="_1_1k_views_ek2_string">1.1k Views</string>
    <string name="_24_comment_ek3_string">24 Comment</string>
    <string name="_256_like_ek3_string">256 Like</string>
    <string name="_3_share_ek3_string">3 Share</string>
    <string name="_1_1k_views_ek3_string">1.1k Views</string>
    <string name="naveen_ek1_string">Naveen</string>
    <string name="_5_min_ago_____sports_____ramanagara______ek1_string">5 min Ago     Sports     Ramanagara     </string>
    <string name="sameera_ek1_string">Sameera</string>
    <string name="_5_min_ago_____politics_____ramanagara______ek1_string">5 min Ago     Politics     Ramanagara     </string>
    <string name="______________________________________________________________________________ek2_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ ಆರಂಭಕ್ಕೂ ಮುನ್ನ
ಟೀಂ ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="_______24______________________________________________ek2_string">ಕೇವಲ 24 ಗಂಟೆಯೊಳಗೆ ಭಾರತ-ಆಸೀಸ್ ಸರಣಿಯ
ಟಿಕೆಟ್ ಸೋಲ್ಡ್ ಔಟ್</string>
    <string name="____20________________________________________________________________________________________________________________________________________________________ek2_string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾಗಿ ಮಾರಾಟವಾಗಿದೆ ಎಂದು ಕ್ರಿಕೆಟ್ ಆಸ್ಟ್ರೇಲಿಯಾ ಮಾಹಿತಿಯನ್ನು...</string>
    <string name="____20____________________________________________________________________________________________________ek2_string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾ...</string>
    <string name="_24_comment_ek4_string">24 Comment</string>
    <string name="_256_like_ek4_string">256 Like</string>
    <string name="_3_share_ek4_string">3 Share</string>
    <string name="_1_1k_views_ek4_string">1.1k Views</string>
    <string name="_24_comment_ek5_string">24 Comment</string>
    <string name="_256_like_ek5_string">256 Like</string>
    <string name="_3_share_ek5_string">3 Share</string>
    <string name="_1_1k_views_ek5_string">1.1k Views</string>
    <string name="naveen_ek2_string">Naveen</string>
    <string name="_5_min_ago_____sports_____ramanagara______ek2_string">5 min Ago     Sports     Ramanagara     </string>
    <string name="sameera_ek2_string">Sameera</string>
    <string name="_5_min_ago_____politics_____ramanagara______ek2_string">5 min Ago     Politics     Ramanagara     </string>
    <string name="_____________________________________________________________________string">ಮಸ್ಕಿ ಉಪಚುನಾವಣೆ; ಕುತೂಹಲ
ಮೂಡಿಸಿದ ಬಿ.ವೈ. ವಿಜಯೇಂದ್ರ-
ವಿರುಪಾಕ್ಷಪ್ಪ ಭೇಟಿ</string>
    <string name="_1_10_string">1/10</string>
    <string name="_______24______________________________________________ek3_string">ಕೇವಲ 24 ಗಂಟೆಯೊಳಗೆ ಭಾರತ-ಆಸೀಸ್ ಸರಣಿಯ
ಟಿಕೆಟ್ ಸೋಲ್ಡ್ ಔಟ್</string>
    <string name="____20________________________________________________________________________________________________________________________________________________________ek3_string">ಟಿ-20 ಸರಣಿಯ ಪಂದ್ಯಗಳು ಕೂಡ ಮನುಕಾ ಓವರ್‌ ಹಾಗೂ ಸ್‌ಸಿಜಿ ಯಲ್ಲಿ ನಡೆಯಲಿದ್ದು ಎಲ್ಲಾ ಪಂದ್ಯಗಳ ಟಿಕೆಟ್‌ಗಳು ಸಂಪೂರ್ಣವಾಗಿ ಮಾರಾಟವಾಗಿದೆ ಎಂದು ಕ್ರಿಕೆಟ್ ಆಸ್ಟ್ರೇಲಿಯಾ ಮಾಹಿತಿಯನ್ನು...</string>
    <string name="_24_comment_ek6_string">24 Comment</string>
    <string name="_256_like_ek6_string">256 Like</string>
    <string name="_3_share_ek6_string">3 Share</string>
    <string name="_1_1k_views_ek6_string">1.1k Views</string>
    <string name="sameera_ek3_string">Sameera</string>
    <string name="_5_min_ago_____politics_____ramanagara______ek3_string">5 min Ago     Politics     Ramanagara     </string>
    <string name="________ek1_string">ರಾಜಕೀಯ</string>
    <string name="________ek2_string">ಕ್ರೀಡೆ</string>
    <string name="__________ek2_string">ಜೀವನಶೈಲಿ</string>
    <string name="_______________ek1_string">ನಮ್ಮ ಪಂಚಾಯಿತಿ</string>
    <string name="______string">ಜೀವನಶೈಲಿ</string>
    <string name="_______________ek2_string">ನಮ್ಮ ಪಂಚಾಯಿತಿ</string>
    <string name="_______________________________________________string">ಗುರುಪೀಠದ ಎದುರು ಕುಳಿತು
ಈ ಹಾಡನ್ನು ಭಜನೆ ಮಾಡು... </string>
    <string name="_______________________________________________ek1_string">ಗುರುಪೀಠದ ಎದುರು ಕುಳಿತು
ಈ ಹಾಡನ್ನು ಭಜನೆ ಮಾಡು... </string>
    <string name="_______________________________________________ek2_string">ಗುರುಪೀಠದ ಎದುರು ಕುಳಿತು
ಈ ಹಾಡನ್ನು ಭಜನೆ ಮಾಡು... </string>
    <string name="november_30__2020__09_40_am_string">November 30, 2020, 09:40 AM</string>
    <string name="november_30__2020__09_40_am_ek1_string">November 30, 2020, 09:40 AM</string>
    <string name="november_30__2020__09_40_am_ek2_string">November 30, 2020, 09:40 AM</string>
    <string name="___________ek2_string">ಇನ್ನಷ್ಟು </string>
    <string name="___________ek3_string">ಇನ್ನಷ್ಟು </string>
    <string name="___________ek4_string">ಇನ್ನಷ್ಟು </string>
    <string name="_________ek2_string">ಉದ್ಯೋಗ </string>
    <string name="______ek1_string">ಕೃಷಿ</string>
    <string name="___________ek5_string">ಜ್ಯೋತಿಷ್ಯ</string>
    <string name="_2h_ago__sports__ramanagara_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek1_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek2_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek3_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek4_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek5_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek6_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek7_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek8_string">2h ago, Sports, Ramanagara</string>
    <string name="_2h_ago__sports__ramanagara_ek9_string">2h ago, Sports, Ramanagara</string>
    <string name="______________________________________________________________________________ek3_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="______________________________________________________________________________ek4_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="______________________________________________________________________________ek5_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="______________________________________________________________________________ek6_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="______________________________________________________________________________ek7_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
    <string name="______________________________________________________________________________ek8_string">ಆಸ್ಟ್ರೇಲಿಯಾ ವಿರುದ್ಧದ ಸರಣಿ
ಆರಂಭಕ್ಕೂ ಮುನ್ನ ಟೀಂ
ಇಂಡಿಯಾಕ್ಕೆ ಸಿಕ್ತು ಭರ್ಜರಿ ನ್ಯೂಸ್</string>
</resources>