<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_Language__4">

    <RelativeLayout
        android:id="@+id/page_choose_language___4_ek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243">

        <View
            android:id="@+id/rectangle_99"
            android:layout_width="327dp"
            android:layout_height="298dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle_99_shape" />

        <TextView
            android:id="@+id/_______________"
            android:layout_width="136dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="117dp"
            android:layout_marginTop="77dp"
            android:fontFamily="Montserrat"
            android:gravity="center"
            android:text="@string/________________string"
            android:textColor="@color/________________color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/rectangle_94"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="123dp"
            android:background="@drawable/rectangle_94_shape"

            />

        <View
            android:id="@+id/rectangle_2110"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="271dp"
            android:background="@drawable/rectangle_2110_shape" />

        <View
            android:id="@+id/rectangle_95"
            android:layout_width="275dp"
            android:layout_height="51dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="192dp"
            android:background="@drawable/rectangle_95_shape" />

        <TextView
            android:id="@+id/______"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="136dp"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/_______string"
            android:textColor="@color/________________color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="159dp"
            android:layout_marginTop="206dp"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/english_string"
            android:textColor="@color/________________color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/___________"
            android:layout_width="120dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="284dp"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/____________string"
            android:textColor="@color/____________color"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>