<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_location__5">


    <ScrollView
        android:id="@+id/choose_location___5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:id="@+id/page_choose_location___5_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">


            <TextView
                android:id="@+id/________________"
                android:layout_width="126dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="124dp"
                android:layout_marginTop="77dp"
                android:fontFamily="Montserrat"
                android:gravity="center"
                android:text="@string/_________________string"
                android:textColor="@color/________________color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/rectangle_94_ek1"
                android:layout_width="275dp"
                android:layout_height="51dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="123dp"
                android:background="@drawable/rectangle_94_ek1_shape" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rectangle_94_ek1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="49dp"
                android:layout_marginTop="26dp" />

            <View
                android:id="@+id/rectangle_2110_ek1"
                android:layout_width="275dp"
                android:layout_height="51dp"
                android:layout_below="@+id/listView"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="109dp"
                android:background="@drawable/rectangle_2110_ek1_shape"
                tools:ignore="UnknownId" />

            <TextView
                android:id="@+id/________________________"
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="91dp"
                android:layout_marginTop="136dp"
                android:fontFamily="Nunito"
                android:gravity="center"
                android:text="@string/_________________________string"
                android:textColor="@color/________________color"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/____________ek1"
                android:layout_width="120dp"
                android:layout_height="37dp"
                android:layout_alignStart="@+id/rectangle_2110_ek1"
                android:layout_alignTop="@+id/rectangle_2110_ek1"
                android:layout_alignEnd="@+id/rectangle_2110_ek1"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="Nunito"
                android:gravity="center"
                android:text="@string/____________ek1_string"
                android:textColor="@color/____________color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_ionic_md_locate"
                android:layout_width="20.5dp"
                android:layout_height="20.5dp"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="139dp"
                android:contentDescription="icon_ionic_md_locate"
                android:src="@drawable/icon_ionic_md_locate" />

        </RelativeLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

